D-15753 added functiona tests and change logic to check without hard coded :/